--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <h1>Hello Coursera! Its a great course..</h1>
-</body>
+ <a href="module2-solution/index.html">project module 2</a>
+ </br> 
+ <a href="module3-solution/index.html">project module 3</a> 
 </html>
 </ browser-sync start --server -directory -files "*" >
