--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title>Coursera Projects</title>
 </head>
 <body>
-<h1>Hello Coursera! Its a great course..</h1>
+<h1>Coursera Projects</h1>
  <a href="module2-solution/index.html">project module 2</a>
  </br> 
  <a href="module3-solution/index.html">project module 3</a> 
+ </br> 
+ <a href="module4-solution/index.html">project module 4</a> 
 </html>
 </ browser-sync start --server -directory -files "*" >
